[gd_scene load_steps=8 format=4 uid="uid://ddetsk7et7kab"]

[ext_resource type="Script" uid="uid://bkicv452l64ci" path="res://world/lobby_world.gd" id="1_mn3uk"]
[ext_resource type="Texture2D" uid="uid://cimoa3utly2jj" path="res://icon.svg" id="2_o7ft1"]
[ext_resource type="Script" uid="uid://gh5l6a41ldlv" path="res://scenes/lobby/lobby_ready_up_area.gd" id="4_2015y"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pkgmy"]
texture = ExtResource("2_o7ft1")
texture_region_size = Vector2i(32, 32)
0:0/size_in_atlas = Vector2i(4, 4)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_3hf5i"]
tile_size = Vector2i(128, 128)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.305569, 0.323259, 0.738167, 1)
sources/0 = SubResource("TileSetAtlasSource_pkgmy")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nx7k0"]
size = Vector2(125, 123)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_upu1s"]
properties/0/path = NodePath(".:players_ready")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="LobbyWorld" type="Node2D"]
script = ExtResource("1_mn3uk")

[node name="BackgroundTilemap" type="TileMapLayer" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -4
tile_map_data = PackedByteArray("AAD9/wMAAAAAAAAAAAD+/wIAAAAAAAAAAAD6/wYAAAAAAAAAAAD7/wUAAAAAAAAAAAD8/wQAAAAAAAAAAAD//wEAAAAAAAAAAAAAAAAAAAAAAAAAAAABAP//AAAAAAAAAAACAP7/AAAAAAAAAAADAP3/AAAAAAAAAAAEAPz/AAAAAAAAAAAFAPv/AAAAAAAAAAAGAPr/AAAAAAAAAAAHAPn/AAAAAAAAAAAIAPj/AAAAAAAAAAAJAPf/AAAAAAAAAAAKAPb/AAAAAAAAAAALAPX/AAAAAAAAAAAMAPT/AAAAAAAAAAANAPP/AAAAAAAAAAAOAPL/AAAAAAAAAAAPAPH/AAAAAAAAAAD7/wcAAAAAAAAAAAD8/wYAAAAAAAAAAAD9/wUAAAAAAAAAAAD+/wQAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAEAAAAAAAAAAAACAAAAAAAAAAAAAAADAP//AAAAAAAAAAAEAP7/AAAAAAAAAAAFAP3/AAAAAAAAAAAGAPz/AAAAAAAAAAAHAPv/AAAAAAAAAAAIAPr/AAAAAAAAAAAJAPn/AAAAAAAAAAAKAPj/AAAAAAAAAAALAPf/AAAAAAAAAAAMAPb/AAAAAAAAAAANAPX/AAAAAAAAAAAOAPT/AAAAAAAAAAAPAPP/AAAAAAAAAAAQAPL/AAAAAAAAAAD8/wgAAAAAAAAAAAD9/wcAAAAAAAAAAAD+/wYAAAAAAAAAAAD//wUAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAMAAAAAAAAAAAACAAIAAAAAAAAAAAADAAEAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAP//AAAAAAAAAAAGAP7/AAAAAAAAAAAHAP3/AAAAAAAAAAAIAPz/AAAAAAAAAAAJAPv/AAAAAAAAAAAKAPr/AAAAAAAAAAALAPn/AAAAAAAAAAAMAPj/AAAAAAAAAAANAPf/AAAAAAAAAAAOAPb/AAAAAAAAAAAPAPX/AAAAAAAAAAAQAPT/AAAAAAAAAAARAPP/AAAAAAAAAAD9/wkAAAAAAAAAAAD+/wgAAAAAAAAAAAD//wcAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAUAAAAAAAAAAAACAAQAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAP//AAAAAAAAAAAIAP7/AAAAAAAAAAAJAP3/AAAAAAAAAAAKAPz/AAAAAAAAAAALAPv/AAAAAAAAAAAMAPr/AAAAAAAAAAANAPn/AAAAAAAAAAAOAPj/AAAAAAAAAAAPAPf/AAAAAAAAAAAQAPb/AAAAAAAAAAARAPX/AAAAAAAAAAASAPT/AAAAAAAAAAD+/woAAAAAAAAAAAD//wkAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAcAAAAAAAAAAAACAAYAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAIAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAP//AAAAAAAAAAAKAP7/AAAAAAAAAAALAP3/AAAAAAAAAAAMAPz/AAAAAAAAAAANAPv/AAAAAAAAAAAOAPr/AAAAAAAAAAAPAPn/AAAAAAAAAAAQAPj/AAAAAAAAAAARAPf/AAAAAAAAAAASAPb/AAAAAAAAAAATAPX/AAAAAAAAAAD//wsAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAkAAAAAAAAAAAACAAgAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAMAAAAAAAAAAAAIAAIAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAAAAAAAAAAAAAALAP//AAAAAAAAAAAMAP7/AAAAAAAAAAANAP3/AAAAAAAAAAAOAPz/AAAAAAAAAAAPAPv/AAAAAAAAAAAQAPr/AAAAAAAAAAARAPn/AAAAAAAAAAASAPj/AAAAAAAAAAATAPf/AAAAAAAAAAAUAPb/AAAAAAAAAAANAPH/AAAAAAAAAAAOAPD/AAAAAAAAAAALAPP/AAAAAAAAAAAMAPL/AAAAAAAAAAAJAPX/AAAAAAAAAAAKAPT/AAAAAAAAAAAHAPf/AAAAAAAAAAAIAPb/AAAAAAAAAAAFAPn/AAAAAAAAAAAGAPj/AAAAAAAAAAADAPv/AAAAAAAAAAAEAPr/AAAAAAAAAAABAP3/AAAAAAAAAAACAPz/AAAAAAAAAAD/////AAAAAAAAAAAAAP7/AAAAAAAAAAD9/wEAAAAAAAAAAAD+/wAAAAAAAAAAAAD7/wMAAAAAAAAAAAD8/wIAAAAAAAAAAAD5/wUAAAAAAAAAAAD6/wQAAAAAAAAAAAAMAPD/AAAAAAAAAAANAO//AAAAAAAAAAAKAPL/AAAAAAAAAAALAPH/AAAAAAAAAAAIAPT/AAAAAAAAAAAJAPP/AAAAAAAAAAAGAPb/AAAAAAAAAAAHAPX/AAAAAAAAAAAEAPj/AAAAAAAAAAAFAPf/AAAAAAAAAAACAPr/AAAAAAAAAAADAPn/AAAAAAAAAAAAAPz/AAAAAAAAAAABAPv/AAAAAAAAAAD+//7/AAAAAAAAAAD///3/AAAAAAAAAAD8/wAAAAAAAAAAAAD9////AAAAAAAAAAD6/wIAAAAAAAAAAAD7/wEAAAAAAAAAAAD4/wQAAAAAAAAAAAD5/wMAAAAAAAAAAAD3/wMAAAAAAAAAAAD4/wIAAAAAAAAAAAD5/wEAAAAAAAAAAAD6/wAAAAAAAAAAAAD7////AAAAAAAAAAD8//7/AAAAAAAAAAD9//3/AAAAAAAAAAD+//z/AAAAAAAAAAD///v/AAAAAAAAAAAAAPr/AAAAAAAAAAABAPn/AAAAAAAAAAACAPj/AAAAAAAAAAADAPf/AAAAAAAAAAAEAPb/AAAAAAAAAAAFAPX/AAAAAAAAAAAGAPT/AAAAAAAAAAAHAPP/AAAAAAAAAAAIAPL/AAAAAAAAAAAJAPH/AAAAAAAAAAAKAPD/AAAAAAAAAAALAO//AAAAAAAAAAAMAO7/AAAAAAAAAADu//r/AAAAAAAAAADv//n/AAAAAAAAAADv//v/AAAAAAAAAADw//j/AAAAAAAAAADw//r/AAAAAAAAAADw//z/AAAAAAAAAADx//f/AAAAAAAAAADx//n/AAAAAAAAAADx//v/AAAAAAAAAADx//3/AAAAAAAAAADy//b/AAAAAAAAAADy//j/AAAAAAAAAADy//r/AAAAAAAAAADy//z/AAAAAAAAAADy//7/AAAAAAAAAADz//X/AAAAAAAAAADz//f/AAAAAAAAAADz//n/AAAAAAAAAADz//v/AAAAAAAAAADz//3/AAAAAAAAAADz////AAAAAAAAAAD0//T/AAAAAAAAAAD0//b/AAAAAAAAAAD0//j/AAAAAAAAAAD0//r/AAAAAAAAAAD0//z/AAAAAAAAAAD0//7/AAAAAAAAAAD0/wAAAAAAAAAAAAD1//P/AAAAAAAAAAD1//X/AAAAAAAAAAD1//f/AAAAAAAAAAD1//n/AAAAAAAAAAD1//v/AAAAAAAAAAD1//3/AAAAAAAAAAD1////AAAAAAAAAAD1/wEAAAAAAAAAAAD2//L/AAAAAAAAAAD2//T/AAAAAAAAAAD2//b/AAAAAAAAAAD2//j/AAAAAAAAAAD2//r/AAAAAAAAAAD2//z/AAAAAAAAAAD2//7/AAAAAAAAAAD2/wAAAAAAAAAAAAD3//H/AAAAAAAAAAD3//P/AAAAAAAAAAD3//X/AAAAAAAAAAD3//f/AAAAAAAAAAD3//n/AAAAAAAAAAD3//v/AAAAAAAAAAD3//3/AAAAAAAAAAD3////AAAAAAAAAAD3/wEAAAAAAAAAAAD4//D/AAAAAAAAAAD4//L/AAAAAAAAAAD4//T/AAAAAAAAAAD4//b/AAAAAAAAAAD4//j/AAAAAAAAAAD4//r/AAAAAAAAAAD4//z/AAAAAAAAAAD4//7/AAAAAAAAAAD4/wAAAAAAAAAAAAD5/+//AAAAAAAAAAD5//H/AAAAAAAAAAD5//P/AAAAAAAAAAD5//X/AAAAAAAAAAD5//f/AAAAAAAAAAD5//n/AAAAAAAAAAD5//v/AAAAAAAAAAD5//3/AAAAAAAAAAD5////AAAAAAAAAAD6/+7/AAAAAAAAAAD6//D/AAAAAAAAAAD6//L/AAAAAAAAAAD6//T/AAAAAAAAAAD6//b/AAAAAAAAAAD6//j/AAAAAAAAAAD6//r/AAAAAAAAAAD6//z/AAAAAAAAAAD6//7/AAAAAAAAAAD7/+3/AAAAAAAAAAD7/+//AAAAAAAAAAD7//H/AAAAAAAAAAD7//P/AAAAAAAAAAD7//X/AAAAAAAAAAD7//f/AAAAAAAAAAD7//n/AAAAAAAAAAD7//v/AAAAAAAAAAD7//3/AAAAAAAAAAD8/+z/AAAAAAAAAAD8/+7/AAAAAAAAAAD8//D/AAAAAAAAAAD8//L/AAAAAAAAAAD8//T/AAAAAAAAAAD8//b/AAAAAAAAAAD8//j/AAAAAAAAAAD8//r/AAAAAAAAAAD8//z/AAAAAAAAAAD9/+v/AAAAAAAAAAD9/+3/AAAAAAAAAAD9/+//AAAAAAAAAAD9//H/AAAAAAAAAAD9//P/AAAAAAAAAAD9//X/AAAAAAAAAAD9//f/AAAAAAAAAAD9//n/AAAAAAAAAAD9//v/AAAAAAAAAAD+/+r/AAAAAAAAAAD+/+z/AAAAAAAAAAD+/+7/AAAAAAAAAAD+//D/AAAAAAAAAAD+//L/AAAAAAAAAAD+//T/AAAAAAAAAAD+//b/AAAAAAAAAAD+//j/AAAAAAAAAAD+//r/AAAAAAAAAAD//+n/AAAAAAAAAAD//+v/AAAAAAAAAAD//+3/AAAAAAAAAAD//+//AAAAAAAAAAD///H/AAAAAAAAAAD///P/AAAAAAAAAAD///X/AAAAAAAAAAD///f/AAAAAAAAAAD///n/AAAAAAAAAAAAAOj/AAAAAAAAAAAAAOr/AAAAAAAAAAAAAOz/AAAAAAAAAAAAAO7/AAAAAAAAAAAAAPD/AAAAAAAAAAAAAPL/AAAAAAAAAAAAAPT/AAAAAAAAAAAAAPb/AAAAAAAAAAAAAPj/AAAAAAAAAAABAOn/AAAAAAAAAAABAOv/AAAAAAAAAAABAO3/AAAAAAAAAAABAO//AAAAAAAAAAABAPH/AAAAAAAAAAABAPP/AAAAAAAAAAABAPX/AAAAAAAAAAABAPf/AAAAAAAAAAACAOj/AAAAAAAAAAACAOr/AAAAAAAAAAACAOz/AAAAAAAAAAACAO7/AAAAAAAAAAACAPD/AAAAAAAAAAACAPL/AAAAAAAAAAACAPT/AAAAAAAAAAACAPb/AAAAAAAAAAADAOn/AAAAAAAAAAADAOv/AAAAAAAAAAADAO3/AAAAAAAAAAADAO//AAAAAAAAAAADAPH/AAAAAAAAAAADAPP/AAAAAAAAAAADAPX/AAAAAAAAAAAEAOj/AAAAAAAAAAAEAOr/AAAAAAAAAAAEAOz/AAAAAAAAAAAEAO7/AAAAAAAAAAAEAPD/AAAAAAAAAAAEAPL/AAAAAAAAAAAEAPT/AAAAAAAAAAAFAOn/AAAAAAAAAAAFAOv/AAAAAAAAAAAFAO3/AAAAAAAAAAAFAO//AAAAAAAAAAAFAPH/AAAAAAAAAAAFAPP/AAAAAAAAAAAGAOj/AAAAAAAAAAAGAOr/AAAAAAAAAAAGAOz/AAAAAAAAAAAGAO7/AAAAAAAAAAAGAPD/AAAAAAAAAAAGAPL/AAAAAAAAAAAHAOn/AAAAAAAAAAAHAOv/AAAAAAAAAAAHAO3/AAAAAAAAAAAHAO//AAAAAAAAAAAHAPH/AAAAAAAAAAAIAOr/AAAAAAAAAAAIAOz/AAAAAAAAAAAIAO7/AAAAAAAAAAAIAPD/AAAAAAAAAAAJAOv/AAAAAAAAAAAJAO3/AAAAAAAAAAAJAO//AAAAAAAAAAAKAOz/AAAAAAAAAAAKAO7/AAAAAAAAAAALAO3/AAAAAAAAAAAAAAwAAAAAAAAAAAABAAsAAAAAAAAAAAABAA0AAAAAAAAAAAACAAoAAAAAAAAAAAACAAwAAAAAAAAAAAACAA4AAAAAAAAAAAADAAkAAAAAAAAAAAADAAsAAAAAAAAAAAADAA0AAAAAAAAAAAADAA8AAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAwAAAAAAAAAAAAEAA4AAAAAAAAAAAAEABAAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAA0AAAAAAAAAAAAFAA8AAAAAAAAAAAAFABEAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA4AAAAAAAAAAAAGABAAAAAAAAAAAAAGABIAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAA0AAAAAAAAAAAAHAA8AAAAAAAAAAAAHABEAAAAAAAAAAAAHABMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAwAAAAAAAAAAAAIAA4AAAAAAAAAAAAIABAAAAAAAAAAAAAIABIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAA0AAAAAAAAAAAAJAA8AAAAAAAAAAAAJABEAAAAAAAAAAAAJABMAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAA4AAAAAAAAAAAAKABAAAAAAAAAAAAAKABIAAAAAAAAAAAALAAEAAAAAAAAAAAALAAMAAAAAAAAAAAALAAUAAAAAAAAAAAALAAcAAAAAAAAAAAALAAkAAAAAAAAAAAALAAsAAAAAAAAAAAALAA0AAAAAAAAAAAALAA8AAAAAAAAAAAALABEAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAwAAAAAAAAAAAAMAA4AAAAAAAAAAAAMABAAAAAAAAAAAAANAP//AAAAAAAAAAANAAEAAAAAAAAAAAANAAMAAAAAAAAAAAANAAUAAAAAAAAAAAANAAcAAAAAAAAAAAANAAkAAAAAAAAAAAANAAsAAAAAAAAAAAANAA0AAAAAAAAAAAANAA8AAAAAAAAAAAAOAP7/AAAAAAAAAAAOAAAAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAwAAAAAAAAAAAAOAA4AAAAAAAAAAAAPAP3/AAAAAAAAAAAPAP//AAAAAAAAAAAPAAEAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAA0AAAAAAAAAAAAQAPz/AAAAAAAAAAAQAP7/AAAAAAAAAAAQAAAAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAwAAAAAAAAAAAARAPv/AAAAAAAAAAARAP3/AAAAAAAAAAARAP//AAAAAAAAAAARAAEAAAAAAAAAAAARAAMAAAAAAAAAAAARAAUAAAAAAAAAAAARAAcAAAAAAAAAAAARAAkAAAAAAAAAAAARAAsAAAAAAAAAAAASAPr/AAAAAAAAAAASAPz/AAAAAAAAAAASAP7/AAAAAAAAAAASAAAAAAAAAAAAAAASAAIAAAAAAAAAAAASAAQAAAAAAAAAAAASAAYAAAAAAAAAAAASAAgAAAAAAAAAAAASAAoAAAAAAAAAAAATAPn/AAAAAAAAAAATAPv/AAAAAAAAAAATAP3/AAAAAAAAAAATAP//AAAAAAAAAAATAAEAAAAAAAAAAAATAAMAAAAAAAAAAAATAAUAAAAAAAAAAAATAAcAAAAAAAAAAAATAAkAAAAAAAAAAAAUAPj/AAAAAAAAAAAUAPr/AAAAAAAAAAAUAPz/AAAAAAAAAAAUAP7/AAAAAAAAAAAUAAAAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAYAAAAAAAAAAAAUAAgAAAAAAAAAAAAVAPf/AAAAAAAAAAAVAPn/AAAAAAAAAAAVAPv/AAAAAAAAAAAVAP3/AAAAAAAAAAAVAP//AAAAAAAAAAAVAAEAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAcAAAAAAAAAAAAWAPj/AAAAAAAAAAAWAPr/AAAAAAAAAAAWAPz/AAAAAAAAAAAWAP7/AAAAAAAAAAAWAAAAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAQAAAAAAAAAAAAWAAYAAAAAAAAAAADn/wEAAAAAAAAAAADn/wMAAAAAAAAAAADn/wUAAAAAAAAAAADn/wcAAAAAAAAAAADn/wkAAAAAAAAAAADn/wsAAAAAAAAAAADn/w0AAAAAAAAAAADn/w8AAAAAAAAAAADn/xEAAAAAAAAAAADo/wAAAAAAAAAAAADo/wIAAAAAAAAAAADo/wQAAAAAAAAAAADo/wYAAAAAAAAAAADo/wgAAAAAAAAAAADo/woAAAAAAAAAAADo/wwAAAAAAAAAAADo/w4AAAAAAAAAAADo/xAAAAAAAAAAAADp////AAAAAAAAAADp/wEAAAAAAAAAAADp/wMAAAAAAAAAAADp/wUAAAAAAAAAAADp/wcAAAAAAAAAAADp/wkAAAAAAAAAAADp/wsAAAAAAAAAAADp/w0AAAAAAAAAAADp/w8AAAAAAAAAAADq//7/AAAAAAAAAADq/wAAAAAAAAAAAADq/wIAAAAAAAAAAADq/wQAAAAAAAAAAADq/wYAAAAAAAAAAADq/wgAAAAAAAAAAADq/woAAAAAAAAAAADq/wwAAAAAAAAAAADq/w4AAAAAAAAAAADr//3/AAAAAAAAAADr////AAAAAAAAAADr/wEAAAAAAAAAAADr/wMAAAAAAAAAAADr/wUAAAAAAAAAAADr/wcAAAAAAAAAAADr/wkAAAAAAAAAAADr/wsAAAAAAAAAAADr/w0AAAAAAAAAAADs//z/AAAAAAAAAADs//7/AAAAAAAAAADs/wAAAAAAAAAAAADs/wIAAAAAAAAAAADs/wQAAAAAAAAAAADs/wYAAAAAAAAAAADs/wgAAAAAAAAAAADs/woAAAAAAAAAAADs/wwAAAAAAAAAAADt//v/AAAAAAAAAADt//3/AAAAAAAAAADt////AAAAAAAAAADt/wEAAAAAAAAAAADt/wMAAAAAAAAAAADt/wUAAAAAAAAAAADt/wcAAAAAAAAAAADt/wkAAAAAAAAAAADt/wsAAAAAAAAAAADu//z/AAAAAAAAAADu//7/AAAAAAAAAADu/wAAAAAAAAAAAADu/wIAAAAAAAAAAADu/wQAAAAAAAAAAADu/wYAAAAAAAAAAADu/wgAAAAAAAAAAADu/woAAAAAAAAAAADv//3/AAAAAAAAAADv////AAAAAAAAAADv/wEAAAAAAAAAAADv/wMAAAAAAAAAAADv/wUAAAAAAAAAAADv/wcAAAAAAAAAAADv/wkAAAAAAAAAAADw//7/AAAAAAAAAADw/wAAAAAAAAAAAADw/wIAAAAAAAAAAADw/wQAAAAAAAAAAADw/wYAAAAAAAAAAADw/wgAAAAAAAAAAADx////AAAAAAAAAADx/wEAAAAAAAAAAADx/wMAAAAAAAAAAADx/wUAAAAAAAAAAADx/wcAAAAAAAAAAADy/wAAAAAAAAAAAADy/wIAAAAAAAAAAADy/wQAAAAAAAAAAADy/wYAAAAAAAAAAADz/wEAAAAAAAAAAADz/wMAAAAAAAAAAADz/wUAAAAAAAAAAAD0/wIAAAAAAAAAAAD0/wQAAAAAAAAAAAD1/wMAAAAAAAAAAADn/xMAAAAAAAAAAADn/xUAAAAAAAAAAADn/xcAAAAAAAAAAADn/xkAAAAAAAAAAADo/xIAAAAAAAAAAADo/xQAAAAAAAAAAADo/xYAAAAAAAAAAADo/xgAAAAAAAAAAADp/xEAAAAAAAAAAADp/xMAAAAAAAAAAADp/xUAAAAAAAAAAADp/xcAAAAAAAAAAADp/xkAAAAAAAAAAADq/xAAAAAAAAAAAADq/xIAAAAAAAAAAADq/xQAAAAAAAAAAADq/xYAAAAAAAAAAADq/xgAAAAAAAAAAADr/w8AAAAAAAAAAADr/xEAAAAAAAAAAADr/xMAAAAAAAAAAADr/xUAAAAAAAAAAADr/xcAAAAAAAAAAADr/xkAAAAAAAAAAADs/w4AAAAAAAAAAADs/xAAAAAAAAAAAADs/xIAAAAAAAAAAADs/xQAAAAAAAAAAADs/xYAAAAAAAAAAADs/xgAAAAAAAAAAADt/w0AAAAAAAAAAADt/w8AAAAAAAAAAADt/xEAAAAAAAAAAADt/xMAAAAAAAAAAADt/xUAAAAAAAAAAADt/xcAAAAAAAAAAADt/xkAAAAAAAAAAADu/wwAAAAAAAAAAADu/w4AAAAAAAAAAADu/xAAAAAAAAAAAADu/xIAAAAAAAAAAADu/xQAAAAAAAAAAADu/xYAAAAAAAAAAADu/xgAAAAAAAAAAADv/wsAAAAAAAAAAADv/w0AAAAAAAAAAADv/w8AAAAAAAAAAADv/xEAAAAAAAAAAADv/xMAAAAAAAAAAADv/xUAAAAAAAAAAADv/xcAAAAAAAAAAADv/xkAAAAAAAAAAADw/woAAAAAAAAAAADw/wwAAAAAAAAAAADw/w4AAAAAAAAAAADw/xAAAAAAAAAAAADw/xIAAAAAAAAAAADw/xQAAAAAAAAAAADw/xYAAAAAAAAAAADw/xgAAAAAAAAAAADx/wkAAAAAAAAAAADx/wsAAAAAAAAAAADx/w0AAAAAAAAAAADx/w8AAAAAAAAAAADx/xEAAAAAAAAAAADx/xMAAAAAAAAAAADx/xUAAAAAAAAAAADx/xcAAAAAAAAAAADx/xkAAAAAAAAAAADy/wgAAAAAAAAAAADy/woAAAAAAAAAAADy/wwAAAAAAAAAAADy/w4AAAAAAAAAAADy/xAAAAAAAAAAAADy/xIAAAAAAAAAAADy/xQAAAAAAAAAAADy/xYAAAAAAAAAAADy/xgAAAAAAAAAAADz/wcAAAAAAAAAAADz/wkAAAAAAAAAAADz/wsAAAAAAAAAAADz/w0AAAAAAAAAAADz/w8AAAAAAAAAAADz/xEAAAAAAAAAAADz/xMAAAAAAAAAAADz/xUAAAAAAAAAAADz/xcAAAAAAAAAAAD0/wYAAAAAAAAAAAD0/wgAAAAAAAAAAAD0/woAAAAAAAAAAAD0/wwAAAAAAAAAAAD0/w4AAAAAAAAAAAD0/xAAAAAAAAAAAAD0/xIAAAAAAAAAAAD0/xQAAAAAAAAAAAD0/xYAAAAAAAAAAAD1/wUAAAAAAAAAAAD1/wcAAAAAAAAAAAD1/wkAAAAAAAAAAAD1/wsAAAAAAAAAAAD1/w0AAAAAAAAAAAD1/w8AAAAAAAAAAAD1/xEAAAAAAAAAAAD1/xMAAAAAAAAAAAD1/xUAAAAAAAAAAAD2/wQAAAAAAAAAAAD2/wYAAAAAAAAAAAD2/wgAAAAAAAAAAAD2/woAAAAAAAAAAAD2/wwAAAAAAAAAAAD2/w4AAAAAAAAAAAD2/xAAAAAAAAAAAAD2/xIAAAAAAAAAAAD2/xQAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wcAAAAAAAAAAAD3/wkAAAAAAAAAAAD3/wsAAAAAAAAAAAD3/w0AAAAAAAAAAAD3/w8AAAAAAAAAAAD3/xEAAAAAAAAAAAD3/xMAAAAAAAAAAAD4/wYAAAAAAAAAAAD4/wgAAAAAAAAAAAD4/woAAAAAAAAAAAD4/wwAAAAAAAAAAAD4/w4AAAAAAAAAAAD4/xAAAAAAAAAAAAD4/xIAAAAAAAAAAAD5/wcAAAAAAAAAAAD5/wkAAAAAAAAAAAD5/wsAAAAAAAAAAAD5/w0AAAAAAAAAAAD5/w8AAAAAAAAAAAD5/xEAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/woAAAAAAAAAAAD6/wwAAAAAAAAAAAD6/w4AAAAAAAAAAAD6/xAAAAAAAAAAAAD7/wkAAAAAAAAAAAD7/wsAAAAAAAAAAAD7/w0AAAAAAAAAAAD7/w8AAAAAAAAAAAD8/woAAAAAAAAAAAD8/wwAAAAAAAAAAAD8/w4AAAAAAAAAAAD9/wsAAAAAAAAAAAD9/w0AAAAAAAAAAAD+/wwAAAAAAAAAAAD2/wIAAAAAAAAAAADz/xkAAAAAAAAAAAD0/xgAAAAAAAAAAAD1/xcAAAAAAAAAAAD1/xkAAAAAAAAAAAD2/xYAAAAAAAAAAAD2/xgAAAAAAAAAAAD3/xUAAAAAAAAAAAD3/xcAAAAAAAAAAAD3/xkAAAAAAAAAAAD4/xQAAAAAAAAAAAD4/xYAAAAAAAAAAAD4/xgAAAAAAAAAAAD5/xMAAAAAAAAAAAD5/xUAAAAAAAAAAAD5/xcAAAAAAAAAAAD5/xkAAAAAAAAAAAD6/xIAAAAAAAAAAAD6/xQAAAAAAAAAAAD6/xYAAAAAAAAAAAD6/xgAAAAAAAAAAAD7/xEAAAAAAAAAAAD7/xMAAAAAAAAAAAD7/xUAAAAAAAAAAAD7/xcAAAAAAAAAAAD7/xkAAAAAAAAAAAD8/xAAAAAAAAAAAAD8/xIAAAAAAAAAAAD8/xQAAAAAAAAAAAD8/xYAAAAAAAAAAAD8/xgAAAAAAAAAAAD9/w8AAAAAAAAAAAD9/xEAAAAAAAAAAAD9/xMAAAAAAAAAAAD9/xUAAAAAAAAAAAD9/xcAAAAAAAAAAAD9/xkAAAAAAAAAAAD+/w4AAAAAAAAAAAD+/xAAAAAAAAAAAAD+/xIAAAAAAAAAAAD+/xQAAAAAAAAAAAD+/xYAAAAAAAAAAAD+/xgAAAAAAAAAAAD//w0AAAAAAAAAAAD//w8AAAAAAAAAAAD//xEAAAAAAAAAAAD//xMAAAAAAAAAAAD//xUAAAAAAAAAAAD//xcAAAAAAAAAAAD//xkAAAAAAAAAAAAAAA4AAAAAAAAAAAAAABAAAAAAAAAAAAAAABIAAAAAAAAAAAAAABQAAAAAAAAAAAAAABYAAAAAAAAAAAAAABgAAAAAAAAAAAABAA8AAAAAAAAAAAABABEAAAAAAAAAAAABABMAAAAAAAAAAAABABUAAAAAAAAAAAABABcAAAAAAAAAAAABABkAAAAAAAAAAAACABAAAAAAAAAAAAACABIAAAAAAAAAAAACABQAAAAAAAAAAAACABYAAAAAAAAAAAACABgAAAAAAAAAAAADABEAAAAAAAAAAAADABMAAAAAAAAAAAADABUAAAAAAAAAAAADABcAAAAAAAAAAAAEABIAAAAAAAAAAAAEABQAAAAAAAAAAAAEABYAAAAAAAAAAAAFABMAAAAAAAAAAAAFABUAAAAAAAAAAAAGABQAAAAAAAAAAAADABkAAAAAAAAAAAAEABgAAAAAAAAAAAAFABcAAAAAAAAAAAAGABYAAAAAAAAAAAAHABUAAAAAAAAAAAAIABQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_3hf5i")

[node name="LobbyReadyUpArea" type="Area2D" parent="."]
position = Vector2(519, 1)
script = ExtResource("4_2015y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LobbyReadyUpArea"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_nx7k0")

[node name="Sprite2D" type="Sprite2D" parent="LobbyReadyUpArea"]
modulate = Color(0.0716508, 0.487382, 0, 1)
texture = ExtResource("2_o7ft1")

[node name="PlayersReadyLabel" type="Label" parent="LobbyReadyUpArea"]
offset_left = -89.0
offset_top = -92.0
offset_right = 86.0
offset_bottom = -69.0
text = "0 Players Ready"
horizontal_alignment = 1

[node name="ReadySynchronizer" type="MultiplayerSynchronizer" parent="LobbyReadyUpArea"]
replication_config = SubResource("SceneReplicationConfig_upu1s")

[connection signal="body_entered" from="LobbyReadyUpArea" to="LobbyReadyUpArea" method="_on_body_entered"]
[connection signal="body_exited" from="LobbyReadyUpArea" to="LobbyReadyUpArea" method="_on_body_exited"]
